fix: Fix contrast on carousel icons in single event page

--- a/student-support-frontend/StudentSupport/src/app/feature-modules/events/single-event-page/single-event-page.component.css
+++ b/student-support-frontend/StudentSupport/src/app/feature-modules/events/single-event-page/single-event-page.component.css
@@ -172,3 +172,37 @@
   cursor: pointer;
   color: var(--secondary-color);
 }
+
+.left {
+  background-color: rgba(0, 0, 0, 0.9);
+  align-self: center;
+  height: 11%;
+  width: 7%;
+  border-radius: 50%;
+  left: 2%;
+}
+
+.right {
+  background-color: rgba(0, 0, 0, 0.9);
+  align-self: center;
+  height: 11%;
+  width: 7%;
+  border-radius: 50%;
+  right: 2%;
+}
+
+.left i,
+.right i {
+  font-size: 40px;
+}
+
+.carousel-control-prev::content,
+.carousel-control-next::content {
+  background-color: rgba(0, 0, 0, 0.6);
+  opacity: 1;
+}
+
+.carousel-control-prev:hover,
+.carousel-control-next:hover {
+  background-color: rgba(0, 0, 0, 1);
+}
